Manifest/Homepage/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-outpost
  namespace: homepage
spec:
  forwardAuth:
    # This address should point to the cluster endpoint provided by the kubernetes service, not the Ingress.
    address: https://auth.cybertronlabs.us/outpost.goauthentik.io/callback?X-authentik-auth-callback=true
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
