Manifest/Homepage/rate-limit.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rate-limit
  namespace: homepage
spec:
  rateLimit:
    average: 100
    burst: 50
