Manifest/Homepage/HomepageDeployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage

---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  type: ExternalName
  externalName: 192.168.40.9
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.homepage.cybertronlabs.us`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-outpost
          namespace: traefik
    - match: Host(`homepage.cybertronlabs.us`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-outpost
          namespace: traefik
  tls:
    secretName: cybertronlabs-tls # change to your cert name
