Manifest/Homepage/HomepageKubeDeployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/name: homepage
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
<<<<<<< HEAD
=======
      securityContext:
        runAsUser: 1000
        runAdGroup: 1000
>>>>>>> a22781b (secured homepage)
      nodeSelector:
        worker: "true"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - image: ghcr.io/gethomepage/homepage:v0.10.9
          imagePullPolicy: IfNotPresent
          name: homepage
          securityContext:
            allowPrivilegeEscalation: false
<<<<<<< HEAD
            runAsNonRoot: false
            seccompProfile:
              type: "RuntimeDefault"
=======
            runAdNonRoot: true
            seccompProfile:
              type: "RuntimeProfile"
>>>>>>> a22781b (secured homepage)
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: homepage
      restartPolicy: Always
      volumes:
        - name: homepage
          persistentVolumeClaim:
            claimName: homepage
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homepage
  name: homepage
  namespace: homepage
spec:
  ports:
    - name: homepage-dashboard
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app: homepage
  type: ClusterIP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.homepage.cybertronlabs.us`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
    - match: Host(`homepage.cybertronlabs.us`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-outpost
          namespace: traefik
#  tls:
#    secretName: cybertronlabs-tls # change to your cert name
