Manifest/Homepage/homepage-oauth-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  type: ExternalName
  externalName: 192.168.40.9 # Use a valid DNS name instead of an IP
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: oauth-backend
  namespace: homepage
spec:
  type: ClusterIP
  selector:
    app: oauth2-proxy
  ports:
    - port: 80
      targetPort: 4180

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.homepage.cybertronlabs.us`) 
      kind: Rule
      services:
        - name: homepage
          port: 3000
      middlewares:
        - name: oauth-auth
          namespace: homepage
    - match: Host(`homepage.cybertronlabs.us`) 
      kind: Rule
      services:
        - name: homepage
          port: 3000
      middlewares:
        - name: oauth-auth
          namespace: homepage
  tls:
    secretName: cybertronlabs-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth-ingressroute
  namespace: homepage
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.cybertronlabs.us`) && PathPrefix(`/oauth2`)
      kind: Rule
      services:
        - name: oauth-backend
          port: 80
      middlewares:
        - name: auth-headers
          namespace: homepage
  tls:
    secretName: cybertronlabs-tls

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-headers
  namespace: homepage
spec:
  headers:
    sslRedirect: true
    stsSeconds: 315360000
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    sslHost: cybertronlabs.us
    stsIncludeSubdomains: true
    stsPreload: true
    frameDeny: true

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth-auth
  namespace: homepage
spec:
  forwardAuth:
    address: http://oauth-backend.homepage.svc.cluster.local/
    trustForwardHeader: true
